/*
 * Copyright the Astrolabe contributors
 * SPDX-License-Identifier: Apache-2.0
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package generated;
option go_package="github.com/vmware-tanzu/astrolabe/pkg/plugin/generated";

message Empty {}

message ProtectedEntityID {
	string peType = 1;
	string id = 2;
	ProtectedEntitySnapshotID snapshotID = 3;
}

message ProtectedEntitySnapshotID {
    string id = 1;
}

message DataTransport {
	string transportType = 1;
	map<string, string> params = 2;
}

message ProtectedEntityInfo {
	ProtectedEntityID id = 1;
	string name = 2;
	int64 size = 3;
	repeated DataTransport dataTransports = 4;
	repeated DataTransport metadataTransports = 5;
	repeated DataTransport combinedTransports = 6;
	repeated ProtectedEntityID componentIDs = 7;
}